Fixed problem with nullable property Now assembly pass peverify

--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="ClassWithNullable.cs" />
+    <Compile Include="ClassWithNullable.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CustomEquals.cs">
       <SubType>Code</SubType>
     </Compile>
