--- a/NuGet/Equals.nuspec
+++ b/NuGet/Equals.nuspec
@@ -1,11 +1,12 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
-  <metadata>
+  <metadata minClientVersion="2.8">
     <id>Equals.Fody</id>
     <version>$version$</version>
     <title>Equals.Fody</title>
     <authors>Rafał Jasica</authors>
     <owners>Rafał Jasica</owners>
+    <developmentDependency>true</developmentDependency>
     <licenseUrl>http://www.opensource.org/licenses/mit-license.php</licenseUrl>
     <projectUrl>http://github.com/Fody/Equals</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
