--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -44,10 +44,13 @@
     <Compile Include="Child.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ClassWithIndexer.cs" />
     <Compile Include="ClassWithNullable.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ClassWithStaticProperties.cs" />
+    <Compile Include="ClassWithStaticProperties.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CustomEquals.cs">
       <SubType>Code</SubType>
     </Compile>
