--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FodyCecil" version="1.24.0-beta2" targetFramework="net45" developmentDependency="true" />
   <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
 </packages>
