--- a/AssemblyToReference/packages.config
+++ b/AssemblyToReference/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.24.0-beta2" targetFramework="portable-net40+sl50+wp80+win" developmentDependency="true" />
-  <package id="Stamp.Fody" version="0.7.2" targetFramework="portable-win+net40+sl40+wp" />
+  <package id="Fody" version="1.28.1" targetFramework="portable-net40+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" developmentDependency="true" />
+  <package id="Stamp.Fody" version="1.2.0" targetFramework="portable-net40+sl50+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
 </packages>
