--- a/Fody/packages.config
+++ b/Fody/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.24.0-beta2" targetFramework="net45" developmentDependency="true" />
-  <package id="FodyCecil" version="1.24.0-beta2" targetFramework="net45" developmentDependency="true" />
-  <package id="Stamp.Fody" version="0.7.2" targetFramework="net45" />
+  <package id="Fody" version="1.28.1" targetFramework="net45" developmentDependency="true" />
+  <package id="FodyCecil" version="1.28.1" targetFramework="net45" developmentDependency="true" />
+  <package id="Stamp.Fody" version="1.2.0" targetFramework="net45" />
 </packages>
