--- a/ReferencedDependency/ReferencedDependency.csproj
+++ b/ReferencedDependency/ReferencedDependency.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="GenericBase.cs" />
     <Compile Include="GuidError.cs" />
     <Compile Include="Parent.cs" />
   </ItemGroup>
