If an overridden property is decorated with [IgnoreDuringEquals], respect that in the equality comparison, fixes #23

--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -92,6 +92,7 @@
     <Compile Include="InheritedClass.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="OverridenWithIgnoredPropertiesClass.cs" />
     <Compile Include="IntArray.cs">
       <SubType>Code</SubType>
     </Compile>
