#27 support Equality for derived class

--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -87,6 +87,7 @@
     <Compile Include="GuidError.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IgnoreBaseClass.cs" />
     <Compile Include="IgnoredPropertiesClass.cs">
       <SubType>Code</SubType>
     </Compile>
