--- a/AssemblyToReference/AssemblyToReference.csproj
+++ b/AssemblyToReference/AssemblyToReference.csproj
@@ -52,6 +52,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CustomGetHashCodeAttribute.cs" />
     <Compile Include="EqualsInternalAttribute.cs" />
     <Compile Include="IgnoreDuringEqualsAttribute.cs" />
     <Compile Include="EqualsAttribute.cs" />
