--- a/NuGet/Equals.Fody.nuspec
+++ b/NuGet/Equals.Fody.nuspec
@@ -15,7 +15,7 @@
     <language>en-UK</language>
     <tags>Equals, GetHashCode, Operators, ILWeaving, Fody, Cecil</tags>
     <dependencies>
-      <dependency id="Fody" version="1.29.2"/>
+      <dependency id="Fody" version="[2.0.0, 3.0.0)"/>
     </dependencies>
   </metadata>
 </package>
