--- a/Equals/Equals.csproj
+++ b/Equals/Equals.csproj
@@ -4,12 +4,11 @@
     <TargetFrameworks>net452;netstandard1.0</TargetFrameworks>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
-    <Authors>Rafał Jasica</Authors>
-    <PackageProjectUrl>http://github.com/Fody/Equals</PackageProjectUrl>
+    <Authors>Rafał Jasica, Simon Cropp</Authors>
     <NoWarn>CS1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Fody" Version="2.3.2" />
-    <PackageReference Include="FodyPackaging" Version="2.3.2" PrivateAssets="All" />
+    <PackageReference Include="Fody" Version="2.3.17" />
+    <PackageReference Include="FodyPackaging" Version="2.3.17" PrivateAssets="All" />
   </ItemGroup>
 </Project>
