--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
 <Project>
   <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <PackageVersion>1.8.2</PackageVersion>
+    <Version>1.8.2</Version>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 </Project>
