--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,5 +4,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Version>1.9.3</Version>
     <LangVersion>latest</LangVersion>
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 </Project>
