--- a/Equals/Equals.csproj
+++ b/Equals/Equals.csproj
@@ -6,6 +6,7 @@
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
     <Authors>Rafał Jasica, Simon Cropp</Authors>
     <NoWarn>CS1591</NoWarn>
+    <PackageOutputPath>$(SolutionDir)nugets</PackageOutputPath>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fody" Version="4.0.2" PrivateAssets="None" />
