--- a/AssemblyToProcess/AssemblyToProcess.csproj
+++ b/AssemblyToProcess/AssemblyToProcess.csproj
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;net5.0</TargetFrameworks>
+    <TargetFrameworks>net452;net6.0</TargetFrameworks>
     <NoWarn>CS0659;CS0660;CS0661</NoWarn>
     <DisableFody>true</DisableFody>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Equals\Equals.csproj" />
+    
     <ProjectReference Include="..\ReferencedDependency\ReferencedDependency.csproj" />
   </ItemGroup>
 </Project>
