--- a/BadCaseAssembliesToProcess/ClassWithoutWeavingInstruction/ClassWithoutWeavingInstruction.csproj
+++ b/BadCaseAssembliesToProcess/ClassWithoutWeavingInstruction/ClassWithoutWeavingInstruction.csproj
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;net5.0</TargetFrameworks>
+    <TargetFrameworks>net452;net6.0</TargetFrameworks>
     <NoWarn>CS0659</NoWarn>
     <DisableFody>true</DisableFody>
   </PropertyGroup>
