--- a/.gitattributes
+++ b/.gitattributes
@@ -28,3 +28,6 @@
 *.pdb binary
 *.png binary
 *.svg binary
+
+.editorconfig text eol=lf working-tree-encoding=UTF-8
+Shared.sln.DotSettings text eol=lf working-tree-encoding=UTF-8
